# R26-SE-026

./: .gitignore  README.md  docker-compose.yml
apps/dashboard-web/: README.md  package-lock.json  package.json  playwright-steps.mjs  pnpm-lock.yaml  screenshot-dashboard.mjs
apps/mobile/: README.md  eas.json  package-lock.json  package.json  tsconfig.json
apps/mobile/app/: _layout.tsx  index.tsx
apps/mobile/docs/: conventions.md
apps/mobile/features/: README.md
apps/mobile/lib/: README.md  dispatchApi.ts  driverLocation.ts  elm327.ts  emergencyContext.tsx  (+4 more)
components/claims-privacy/: README.md  requirements.txt  run-dev.sh
components/dispatch/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
components/geo-intelligence/: README.md  pyproject.toml
components/geo-intelligence/data/: hotspot_results.csv  refined_weights.csv  scored_incidents.csv  stats.json  sumo_results.csv
components/geo-intelligence/docs/: pp1-functional-requirements.md
components/geo-intelligence/scripts/: refine_model.py
components/geo-intelligence/src/: api.py  hotspot_analysis.py  impact_scoring.py  sumo_simulation.py
components/predictive-maintenance/: Dockerfile  README.md  generate_data.py  generate_training_data.py  predictive_maintenance.postman_collection.json  requirements.txt  seed_vehicle.py  train_models.py
components/vehicle-service/: .env.example  package-lock.json  package.json
contracts/: README.md  geo-intelligence.openapi.json  geo-intelligence.openapi.yaml
docs/: README.md  contributing.md  members.md
infra/: README.md
(+126 files in other folders)
