[project]
name = "kaduna-geo-intelligence"
version = "0.1.0"
description = "Kaduna.lk — Geo-Intelligence component (impact scoring service)"
authors = [{ name = "Asath M M", email = "it22633422@my.sliit.lk" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "numpy>=1.26",
    "pandas>=2.2",
]

[project.scripts]
geo-intelligence = "src.api:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
